front/assets/styles/site.scss
/* ... */
header {
  padding-left: var(--gouttiere);
  padding-right: var(--gouttiere);
  border-bottom: 1px solid #dddddd;
  box-shadow: 0 2px 6px 0 rgba(0, 0, 18, 0.16);

  @include a-partir-de(lg) {
    box-shadow: none;
    border-bottom: none;
  }

  a {
    border: none;

    &:hover {
      border-bottom-style: none;
    }
  }

  .contenu-section {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 32px;
    padding: 20px 0;

    @include a-partir-de(md) {
      justify-content: flex-start;
    }
  }

  .titre-msc {
    display: flex;
    align-items: center;
    gap: 32px;

    .logo-anssi {
      width: 68px;
      height: 68px;
      display: none;
      @include a-partir-de(md) {
        display: block;
      }
    }

    .titre-site {
      display: none;
      @include a-partir-de(md) {
        display: block;
      }

      h1 {
        margin: 0;
        font-size: 1.25rem;
        line-height: 1.75rem;

        .beta {
          text-transform: uppercase;
          color: #18753c;
          background: #b8fec9;
          padding: 0 6px;
          border-radius: 4px;
          margin-left: 4px;
          font-size: 0.75rem;
          line-height: 1.25rem;
        }
      }

      h2 {
        margin: 0;
        font-size: 0.875rem;
        line-height: 1.5rem;
        color: #3a3a3a;
        font-weight: normal;
      }
    }
  }

  #zone-identification {
    display: none;
    @include a-partir-de(lg) {
      display: block;
    }
    & {
      margin-left: auto;
    }
    .profil-connecte,
    .profil-deconnecte,
    .profil-connecte > a,
    .libelle-profil {
      display: flex;
      gap: 8px;
      align-items: center;
      padding: 4px 8px;
      &:before {
        width: 16px;
        height: 16px;
        line-height: 16px;
      }
    }

    .profil-connecte > a,
    .profil-deconnecte > a,
    .libelle-profil {
      color: #000091;
    }

    .profil-deconnecte > a:before {
      content: url('/assets/images/icone-profil-non-connecte.svg');
    }

    .profil-connecte > a:before {
      content: url('/assets/images/icone-profil-deconnecte.svg');
    }

    .libelle-profil:before {
      content: url('/assets/images/icone-profil-connecte.svg');
    }
  }

  .ouverture-menu {
    background: transparent;
    cursor: pointer;
    border: 1px solid #ddd;
    width: 40px;
    height: 40px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin-left: auto;

    @include a-partir-de(lg) {
      display: none;
    }

    img {
      width: 24px;
      height: 24px;
    }
  }

  .menu-mobile {
    display: flex;
    flex-direction: column;
    position: fixed;
    z-index: 10;
    background: white;
    width: calc(100% - 32px);
    padding: 16px;
    height: 100vh;
    top: 0;
    left: 0;

    &.invisible {
      display: none;
    }

    #menu-mobile-fermer {
      align-self: flex-end;
      color: #000091;

      &:after {
        content: '';
        display: block;
        width: 16px;
        height: 16px;
        background: url('/assets/images/icone-croix.svg') no-repeat;
      }
    }

    #zone-identification-mobile {
       border-bottom: 1px solid #dddddd;
       padding-bottom: 12px;

       #zone-identification {
        display: block;
        
        .profil-connecte > span.libelle-profil {
          display: none;
        }
       }
    }

    .choix {
      display: flex;
      flex-direction: column;
      padding-top: 12px;

      a, details {
        font-weight: bold;
        width: calc(100% - 32px);
        border-bottom: 1px solid #dddddd;
        padding: 12px 16px;

        &.actif {
          position: relative;

          &:before {
            content: '';
            display: block;
            width: 2px;
            height: 24px;
            left: 0;
            background-color: var(--jaune-msc);
            position: absolute;
          }
        }
      }

      details {
        padding: 12px 16px;

        &[open] summary:after {
          transform: rotate(180deg);
        }

        &[open] summary {
          margin-bottom: 8px;
        }

        summary {
          font-weight: bold;
          display: flex;
          align-items: center;
          justify-content: space-between;

          &::marker {
            content: '';
          }

          &::-webkit-details-marker {
            display: none;
          }

          &:after {
            content: '';
            display: block;
            width: 16px;
            height: 16px;
            background: url('/assets/images/icone-chevron-bas.svg');
          }
        }

        a {
          border-bottom: none;
          font-weight: normal;
        }
      }
    }
  }
}
/* ... */

